Add all html text information to index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,83 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>I'm Done With This!!!!!!</title>
+		<title>Odin Landing Page</title>
 	</head>
 
 
 	<body>
-	
+        <div class="header">
+			<div>Header Logo</div>
+			<div>
+				<a href="#">header link one</a>
+				<a href="#">header link two</a>
+				<a href="#">header link three</a>
+			</div>
+		</div>
+		<div class="opener">
+			<div class="opener-text-block">
+				<div>This website is awesome</div>
+				<div>This website has some subtext that goes ehre under the main title. It's smaller font and the color is lower contrast</div>
+				<div class="sign-up-button-1">Sign up</div>
+			</div>
+			<div class="opener-image">
+				<img src="#" alt="this is a placeholder for an image">
+			</div>
+		</div>
+		<div class="random-info">
+			<div class="random-info-title">
+				Some random information.
+			</div>
+			<div class="random-info-blocks">
+				<div class="random-info-block-1">
+					<div>
+						<img src="#" alt="">
+					</div>
+					<div>this is some subtext under an illustration or image</div>
+				</div>
+				<div class="random-info-block-2">
+					<div>
+						<img src="#" alt="">
+					</div>
+					<div>this is some subtext under an illustration or image</div>
+				</div>
+				<div class="random-info-block-3">
+					<div>
+						<img src="#" alt="">
+					</div>
+					<div>this is some subtext under an illustration or image</div>
+				</div>
+				<div class="random-info-block-4">
+					<div>
+						<img src="#" alt="">
+					</div>
+					<div>this is some subtext under an illustration or image</div>
+				</div>
+			</div>
+		</div>
+		<div class="quote-block">
+			<div class="quote">
+				This is an inspiring quote, or a testimonial from a customer. Maybe it's
+				just filling up space, or maybe people will actually read it. Who knows? 
+				All I know is that it looks nice.
+			</div>
+			<div class="speaker">
+				-Thor, God of Thunder
+			</div>
+		</div>
+		<div class="sign-up-bar">
+			<div class="sign-up-description">
+				<div>Call to action! It's time!</div>
+				<div>Sign up for our product by clicking that button right over there!</div>
+			</div>
+				<div class="sign-up-button-2">
+				<div>Sign up</div>
+			</div>
+		</div>
+		<div class="footer">
+			<div>
+				Copyright © The Odin Project 2021
+			</div>
+		</div>
 	</body>
 </html>
