--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
         <div class="header">
 			<div>Header Logo</div>
-			<div>
+			<div class="header-links">
 				<a href="#">header link one</a>
 				<a href="#">header link two</a>
 				<a href="#">header link three</a>
