--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body>
         <div class="header">
-			<div>Header Logo</div>
+			<div class="header-logo">Header Logo</div>
 			<div class="header-links">
 				<a href="#">header link one</a>
 				<a href="#">header link two</a>
