Change background color and alignment of opener

--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
 
 
 	<body>
-        <div class="header">
-			<div class="header-logo">Header Logo</div>
-			<div class="header-links">
-				<a href="#">header link one</a>
-				<a href="#">header link two</a>
-				<a href="#">header link three</a>
+		<div class="header-opener">
+			<div class="header">
+				<div class="header-logo">Header Logo</div>
+				<div class="header-links">
+					<a href="#">header link one</a>
+					<a href="#">header link two</a>
+					<a href="#">header link three</a>
+				</div>
 			</div>
-		</div>
-		<div class="opener">
-			<div class="opener-text-block">
-				<div>This website is awesome</div>
-				<div>This website has some subtext that goes ehre under the main title. It's smaller font and the color is lower contrast</div>
-				<div class="sign-up-button-1">Sign up</div>
-			</div>
-			<div class="opener-image">
-				<img src="#" alt="this is a placeholder for an image">
+			<div class="opener">
+				<div class="opener-text-block">
+					<div class="opener-main">This website is awesome</div>
+					<div>This website has some subtext that goes ehre under the main title. It's smaller font and the color is lower contrast</div>
+					<div class="sign-up-button-1">Sign up</div>
+				</div>
+				<div class="opener-image">
+					<img src="#" alt="this is a placeholder for an image">
+				</div>
 			</div>
 		</div>
 		<div class="random-info">
