Format spacing and text of opener-text-block

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			<div class="opener">
 				<div class="opener-text-block">
 					<div class="opener-main">This website is awesome</div>
-					<div>This website has some subtext that goes ehre under the main title. It's smaller font and the color is lower contrast</div>
-					<div class="sign-up-button-1">Sign up</div>
+					<div class="opener-text">This website has some subtext that goes ehre under the main title. It's smaller font and the color is lower contrast</div>
+					<button class="sign-up-button-1">Sign up</button>
 				</div>
 				<div class="opener-image">
 					<img src="#" alt="this is a placeholder for an image">
