Format random info section and add blue squares

--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
 				Some random information.
 			</div>
 			<div class="random-info-blocks">
-				<div class="random-info-block-1">
-					<div>
+				<div class="random-info-block">
+					<div class="random-info-image">
 						<img src="#" alt="">
 					</div>
 					<div>this is some subtext under an illustration or image</div>
 				</div>
-				<div class="random-info-block-2">
-					<div>
+				<div class="random-info-block">
+					<div class="random-info-image">
 						<img src="#" alt="">
 					</div>
 					<div>this is some subtext under an illustration or image</div>
 				</div>
-				<div class="random-info-block-3">
-					<div>
+				<div class="random-info-block">
+					<div class="random-info-image">
 						<img src="#" alt="">
 					</div>
 					<div>this is some subtext under an illustration or image</div>
 				</div>
-				<div class="random-info-block-4">
-					<div>
+				<div class="random-info-block">
+					<div class="random-info-image">
 						<img src="#" alt="">
 					</div>
 					<div>this is some subtext under an illustration or image</div>
