Format random information section

--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
 					<div class="random-info-image">
 						<img src="#" alt="">
 					</div>
-					<div>this is some subtext under an illustration or image</div>
+					<div class="random-info-text">this is some subtext under an illustration or image</div>
 				</div>
 				<div class="random-info-block">
 					<div class="random-info-image">
 						<img src="#" alt="">
 					</div>
-					<div>this is some subtext under an illustration or image</div>
+					<div class="random-info-text">this is some subtext under an illustration or image</div>
 				</div>
 				<div class="random-info-block">
 					<div class="random-info-image">
 						<img src="#" alt="">
 					</div>
-					<div>this is some subtext under an illustration or image</div>
+					<div class="random-info-text">this is some subtext under an illustration or image</div>
 				</div>
 				<div class="random-info-block">
 					<div class="random-info-image">
 						<img src="#" alt="">
 					</div>
-					<div>this is some subtext under an illustration or image</div>
+					<div class="random-info-text">this is some subtext under an illustration or image</div>
 				</div>
 			</div>
 		</div>
