--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
 			</div>
 		</div>
 		<div class="quote-block">
-			<div class="quote">
-				This is an inspiring quote, or a testimonial from a customer. Maybe it's
-				just filling up space, or maybe people will actually read it. Who knows? 
-				All I know is that it looks nice.
-			</div>
-			<div class="speaker">
-				-Thor, God of Thunder
+			<div class="quote-speaker">
+				<div class="quote">
+					This is an inspiring quote, or a testimonial from a customer. Maybe it's
+					just filling up space, or maybe people will actually read it. Who knows? 
+					All I know is that it looks nice.
+				</div>
+				<div class="speaker">
+					-Thor, God of Thunder
+				</div>
 			</div>
 		</div>
 		<div class="sign-up-bar">
