Format sign up section and sign up bar

--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
 				</div>
 			</div>
 		</div>
-		<div class="sign-up-bar">
-			<div class="sign-up-description">
-				<div>Call to action! It's time!</div>
-				<div>Sign up for our product by clicking that button right over there!</div>
-			</div>
-				<div class="sign-up-button-2">
-				<div>Sign up</div>
+		<div class="sign-up-section">
+			<div class="sign-up-bar">
+				<div class="sign-up-description">
+					<div class="sign-up-main">Call to action! It's time!</div>
+					<div class="sign-up-text">Sign up for our product by clicking that button right over there!</div>
+				</div>
+				<div class="sign-up-button-2-container">
+					<button class="sign-up-button-2">Sign up</button>
+				</div>
 			</div>
 		</div>
 		<div class="footer">
